Fix topic avatar flair position on mobile

--- a/assets/stylesheets/whos_online.scss
+++ b/assets/stylesheets/whos_online.scss
@@ -96,6 +96,10 @@ html.whos-online-flair {
     width: 10px;
   }
 
+  &.mobile-view .topic-avatar.user-online::before {
+    top: 3px;
+  }
+
   .topic-map .avatars div{ // Add some spacing to the avatars
     margin-left: 5px;
   }
